Change FT pref to be a boolean instead of dictionary

FT pref used to be a dictionary with a single boolean field. Make
it a boolean instead.

Bug: 909753
TEST: shill unittests, browser_tests
Change-Id: I80304f6be20ebc9e7eec56f0dd2f36e2e8cf5af5
Reviewed-on: https://chromium-review.googlesource.com/c/1354343
Commit-Queue: Matthew Wang <matthewmwang@chromium.org>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612336}
Former-commit-id: cfef86c2c52dfa99ee3ec6717986a98e8e0cd564